--- a/cn.zh-CN/新功能发布记录/新功能发布记录.md
+++ b/cn.zh-CN/新功能发布记录/新功能发布记录.md
@@ -2,11 +2,17 @@
 
 本章节介绍了云数据库POLARDB的产品功能和对应的文档动态。
 
+## 2019年9月 {#section_b3f_922_epg .section}
+
+|功能名称|功能描述|发布时间|相关文档|
+|----|----|----|----|
+|POLARDB MySQL 8.0 正式上线商用|原生支持并行查询，特定场景下（TPC-H测试）性能提升十倍。另外，还支持不锁表快速添加字段，大大降低添加字段对业务稳定性的影响，同时增强了NoSQL的部分功能，可以方便地使用JSON数据类型，在SQL方面增加了窗口函数等高级特性。|2019-09-12|[并行查询](../../../../cn.zh-CN/POLARDB for MySQL用户指南/并行查询/并行查询.md#)|
+
 ## 2019年8月 {#section_xqi_t57_xbw .section}
 
 |功能名称|功能描述|发布时间|相关文档|
 |----|----|----|----|
-|性能洞察|POLARDB推出性能洞察功能，以简单直观的方式帮助您迅速评估数据库负载，找到性能问题的源头，提升数据库的稳定性。|2019-08-27|-|
+|性能洞察|POLARDB推出性能洞察功能，以简单直观的方式帮助您迅速评估数据库负载，找到性能问题的源头，提升数据库的稳定性。|2019-08-27|[性能洞察](../../../../cn.zh-CN/POLARDB for MySQL用户指南/诊断与优化/性能洞察.md#)|
 
 ## 2019年7月 {#section_vjf_s4n_kbf .section}
 
@@ -40,13 +46,13 @@
  [DescribeBackupPolicy](../../../../cn.zh-CN/API参考/备份管理/DescribeBackupPolicy.md#)
 
  |
-|存储资源包|POLARDB推出了预付费形式的存储包。支持从100G到100T，共9个规格，容量不够可以随时升级。存储空间无需手动配置，根据数据量自动伸缩，您只需为实际使用的数据量按小时付费。|2019-07-30|[使用存储包](../../../../cn.zh-CN/POLARDB for MySQL用户指南/使用存储包.md#)|
+|存储资源包|POLARDB推出了预付费形式的存储包。支持从100G到100T，共9个规格，容量不够可以随时升级。相比按量付费，包年包月的存储包有折扣，购买的容量越大，折扣力度就越大。|2019-07-30|[使用存储包](../../../../cn.zh-CN/POLARDB for MySQL用户指南/使用存储包.md#)|
 |数据库管理|表名长度限制与开源MySQL保持一致。 -   字母或数字表名长度限制从59个字符提升到64个字符。
 -   汉字表名长度限制从11个字符提升到50个字符。
 
  |2019-07-12|[使用限制](../../../../cn.zh-CN/产品简介/使用限制.md#)|
 |临时升配|POLARDB支持临时升级集群规格配置，应对短时间（一般小于7天）的业务高峰期。临时升级只需要支付升级期间的费用，按小时折算差价，可大幅降低活动预算。|2019-07-11|[临时升配](../../../../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/临时升配.md#)|
-|并行查询|POLARDB for MySQL 8.0重磅推出并行查询框架，当您的查询数据量到达一定阈值，就会自动启动并行查询框架。在存储层将数据分片到不同的线程上，多个线程并行计算，将结果流水线汇总到总线程，最后总线程做简单归并返回给用户，从而使查询耗时指数级下降。|2019-07-01|-|
+|并行查询|POLARDB for MySQL 8.0重磅推出并行查询框架，当您的查询数据量到达一定阈值，就会自动启动并行查询框架。并行查询 （Parallel Query）利用多核CPU的并行处理能力，大幅提高查询效率（TPC-H标准测试模型，性能提升10倍）。|2019-07-01|[并行查询](../../../../cn.zh-CN/POLARDB for MySQL用户指南/并行查询/并行查询.md#)|
 
 ## 2019年6月 {#section_0o2_nz6_q7t .section}
 
@@ -79,7 +85,7 @@
  [ModifyDBNodeClass](../../../../cn.zh-CN/API参考/节点管理/ModifyDBNodeClass.md#)
 
  |
-|自定义集群地址|POLARDB推出自定义集群地址，您可以配置独立的只读连接地址。支持修改自己的集群地址，可以指定哪些节点提供服务，同时还可以创建多个集群地址，分别调度到不同的节点，以达到资源隔离或独占的效果。|2019-05-06|[设置/释放自定义集群地址](../../../../cn.zh-CN/POLARDB for MySQL用户指南/连接数据库集群/设置__释放自定义集群地址.md#)|
+|自定义集群地址|POLARDB推出自定义集群地址，可以指定哪些节点提供服务，同时还可以创建多个集群地址，分别调度到不同的节点，以达到资源隔离或独占的效果。|2019-05-06|[设置/释放自定义集群地址](../../../../cn.zh-CN/POLARDB for MySQL用户指南/连接数据库集群/设置__释放自定义集群地址.md#)|
 
 ## 2019年4月 {#section_3y6_0w7_37d .section}
 
@@ -103,17 +109,16 @@
 
 |功能名称|功能描述|发布时间|相关文档|
 |----|----|----|----|
-|OpenAPI支持|开放OpenAPI，创建集群、删除集群、管理连接地址、管理账号&数据库、管理参数等功能可以通过API操作。您也可以使用阿里云命令行工具aliyuncli 或 Web端命令行工具 CloudShell 来管理您的POLARDB集群。|2018-12-28|[API概览](../../../../cn.zh-CN/API参考/API概览.md#)|
+|OpenAPI支持|开放OpenAPI，创建集群、删除集群、管理连接地址、管理账号&数据库、管理参数等功能可以通过API操作。您也可以使用[阿里云命令行工具CLI](https://help.aliyun.com/document_detail/110244.html)或 Web端命令行工具[CloudShell](https://help.aliyun.com/document_detail/90256.html)来管理您的POLARDB集群。|2018-12-28|[API概览](../../../../cn.zh-CN/API参考/API概览.md#)|
 |SQL洞察|通过采集、分析数据库原始SQL日志，帮您洞察潜在的安全和性能风险。 -   增强了搜索功能，提供按照DB、User、客户端IP、线程ID、执行时长、扫描行数等多维度检索能力，并支持搜索结果的导出和下载。
 -   新增了分析能力，可以对指定时间段的SQL日志进行可视化交互式分析，找出异常SQL，定位性能问题。
 
  |2018-12-21|[SQL洞察](../../../../cn.zh-CN/POLARDB for MySQL用户指南/SQL洞察.md#)|
-|POLARDB数据库默认提供集群地址并支持会话读一致性|POLARDB集群默认提供一个集群地址，通过连接该地址，即可连接到所有节点。带有读写分离功能，写请求会自动发往主节点，读请求会自动根据各节点的负载发往主节点或只读节点。同时为了确保延迟情况下数据查询一致性，POLARDB提供了会话读一致性保障。|2018-12-20| [查看连接地址](../../../../cn.zh-CN/POLARDB for MySQL快速入门/查看连接地址.md#)
+|默认提供集群地址并支持会话读一致性|POLARDB集群默认提供一个集群地址，通过连接该地址，即可连接到所有节点。带有读写分离功能，写请求会自动发往主节点，读请求会自动根据各节点的负载发往主节点或只读节点。同时为了确保延迟情况下数据查询一致性，POLARDB提供了会话读一致性保障。|2018-12-20| [查看连接地址](../../../../cn.zh-CN/POLARDB for MySQL快速入门/查看连接地址.md#)
 
  [云数据库POLARDB之会话读一致性](../../../../cn.zh-CN/产品简介/隐藏目录/云数据库POLARDB之会话读一致性.md#)
 
  |
-|复杂SQL查询加速|POLARDB数据库支持复杂SQL查询加速功能（简称SQL加速），通过并行计算来提升复杂大SQL的查询性能，部分SQL性能预计可提升8-30倍。提供额外的只读查询连接地址，通过该地址对数据库进行访问会默认开启SQL加速。|2018-11-02|[复杂SQL查询加速](../../../../cn.zh-CN/POLARDB for MySQL用户指南/隐藏目录/复杂SQL查询加速.md#)|
 |监控报警|云数据库POLARDB与云监控打通，支持监控报警等功能。您可以在云监控配置对POLARDB数据库的CPU、内存、连接数、网络带宽等指标进行监控并设置报警。|2018-10-26|[性能监控与报警](../../../../cn.zh-CN/POLARDB for MySQL用户指南/性能监控与报警.md#)|
 |账号和数据库管理|支持在控制台创建、删除数据库；支持创建、删除账号；支持管理账号权限、重置账号等操作。|2018-10-19| [数据库管理](../../../../cn.zh-CN/POLARDB for MySQL用户指南/数据库管理.md#)
 
@@ -131,14 +136,14 @@
  |
 |手动重启节点|支持POLARDB集群主节点、只读节点等的手动重启操作。|2018-07-31|[重启节点](../../../../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/重启节点.md#)|
 |全量迁移|POLARDB接入DTS，支持从RDS（MySQL）全量迁移到POLARDB。|2018-07-13|[从RDS for MySQL迁移至POLARDB for MySQL](../../../../cn.zh-CN/数据迁移__同步/POLARDB for MySQL/数据迁移/从RDS for MySQL迁移至POLARDB for MySQL.md#)|
-|读写分离数据库接|POLARDB支持通过读写分离数据库连接地址，访问POLARDB集群的能力。提供读写请求自动路由，以及并发请求的自适应负载均衡的能力。|2018-07-07|[读写分离](../../../../cn.zh-CN/POLARDB for MySQL用户指南/读写分离.md#)|
+|读写分离|POLARDB支持通过读写分离数据库连接地址，访问POLARDB集群的能力。提供读写请求自动路由，以及并发请求的自适应负载均衡的能力。|2018-07-07|[读写分离](../../../../cn.zh-CN/POLARDB for MySQL用户指南/读写分离.md#)|
 |按量计费售卖模式|POLARDB增加全规格按量计费售卖，包括新购、升级、降级、增加只读节点、减少只读节点以及按量转包年包月功能。|2018-06-25|[规格与定价](../../../../cn.zh-CN/产品定价/规格与定价.md#)|
 |在线规格变配|POLARDB增加计算规格在线升级能力。|2018-05-25|[变更配置](../../../../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md#)|
 |在线增减只读节点|POLARDB支持在线增加只读节点或者减少只读节点。|2018-05-25|[增加或删除节点](../../../../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/增加或删除节点.md#)|
 |日志管理|增加日志管理功能： -   错误日志管理。
 -   慢查询日志分析。
 
- |2018-05-25|[什么是POLARDB](../../../../cn.zh-CN/产品简介/什么是POLARDB.md#)|
+ |2018-05-25|[查看日志](https://help.aliyun.com/document_detail/72743.html)|
 |POLARDB全规格放开售卖|云数据库POLARDB支持更多产品规格售卖，在已有16c 128g，32c 220g的基础上，增加支持更多规格售卖，如：2c 4g，2c 16g，4c 32g，8c 64g。|2018-05-24|[规格与定价](../../../../cn.zh-CN/产品定价/规格与定价.md#)|
 |POLARDB商用上线|云数据库POLARDB是阿里云自研的能满足高吞吐在线事务处理的关系型云数据库。既融合了商业数据库稳定可靠、高性能、可扩展的特征，又具有开源数据库简洁开放的优势。 -   SQL：100%兼容MySQL 5.6 。
 -   性能：100万QPS OLTP处理能力，10ms内数据延迟，10s内高可用切换时间。
