--- a/intl.zh-CN/POLARDB for MySQL用户指南/备份与恢复/恢复数据.md
+++ b/intl.zh-CN/POLARDB for MySQL用户指南/备份与恢复/恢复数据.md
@@ -9,8 +9,7 @@
 1.  将历史数据恢复到新集群中。您可以选择以下其中一种恢复方式：
     -   [按时间点恢复（恢复到任意时间点）](#)
     -   [按备份集（快照）恢复](#)
-2.  [登录到集群](../../../../intl.zh-CN/POLARDB for MySQL快速入门/连接数据库集群.md)，验证数据的准确性。
-3.  [将需要的数据迁移到原集群](../../../../intl.zh-CN/数据迁移__同步/POLARDB for MySQL/数据迁移/从POLARDB for MySQL迁移至POLARDB for MySQL.md#)。
+2.  [登录到集群](../../../../intl.zh-CN/POLARDB for MySQL用户指南/连接数据库集群/连接数据库集群.md)，验证数据的准确性。
 
 **说明：** 恢复后的集群包含原集群的数据和账号信息，不包含原集群的参数设置。
 
@@ -24,7 +23,7 @@
 4.  在左侧导航栏中，选择**配置与管理** \> **备份恢复**。
 5.  单击**按时间点恢复**，在弹出的对话框中单击**确认** 。
 
-    ![按时间点恢复](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17710/156689180534703_zh-CN.png)
+    ![按时间点恢复](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17710/156878865834703_zh-CN.png)
 
 6.  在克隆实例页面中，选择新集群的计费方式：
     -   **预付费**：在创建集群时需要支付计算集群（一个主节点和一个只读节点）的费用，而存储空间会根据实际数据量按小时计费，并从账户中按小时扣除。如果您要长期使用该集群，**预付费**方式更加划算，而且购买时长越长，折扣越多。
