--- a/cn.zh-CN/POLARDB for PostgreSQL用户指南/计费管理/自动续费集群.md
+++ b/cn.zh-CN/POLARDB for PostgreSQL用户指南/计费管理/自动续费集群.md
@@ -8,52 +8,50 @@
 
 -   自动续费将于集群到期前9天开始扣款，支持现金及代金券扣款，请保持账户余额充足。
 -   若您在自动扣款日期前进行了手动续费，则系统将在下一次到期前进行自动续费。
--   自动续费功能于次日生效。若您的集群将于次日到期，为避免业务中断，请手动进行续费，详细步骤请参见[手动续费集群](intl.zh-CN/POLARDB for MySQL用户指南/计费管理/手动续费集群.md#)。
+-   自动续费功能于次日生效。若您的集群将于次日到期，为避免业务中断，请手动进行续费，详细步骤请参见[手动续费集群](cn.zh-CN/POLARDB for MySQL用户指南/计费管理/手动续费集群.md#)。
 
-## 开通自动续费 {#section_grh_sjn_wdb .section}
-
-**在购买集群时开通续费**
+## 购买集群时开通续费 {#section_05j_6cb_1j9 .section}
 
 **说明：** 开通自动续费后，系统将根据您的**购买时长**为周期进行自动续费。例如，如果您购买了3个月的集群并勾选了自动续费，则每次自动续费时会缴纳3个月的费用。
 
 在创建新集群时时，可以勾选**自动续费**。
 
-![购买时开通](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156594094246767_zh-CN.png)
+![购买时开通](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156886207946767_zh-CN.png)
 
-**购买集群后开通自动续费**
+## 购买集群后开通自动续费 {#section_grh_sjn_wdb .section}
 
 **说明：** 开通自动续费后，系统将根据您选择的续费周期进行自动续费。例如，如果您选择了3个月的续费周期，则每次自动续费时会缴纳3个月的费用。
 
 1.  登录[POLARDB管理控制台](https://polardb.console.aliyun.com/)。
 2.  在控制台右上方，选择**费用** \> **续费管理**。
 
-    ![进入续费管理](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156594094246768_zh-CN.png)
+    ![进入续费管理](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156886208046768_zh-CN.png)
 
 3.  在控制台左上角单击**体验新版**，切换到新版控制台。
 
-    ![切换新版](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/156594094248373_zh-CN.png)
+    ![切换新版](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/156886208048373_zh-CN.png)
 
 4.  通过搜索过滤功能在手动续费或到期不续费页签中找到目标集群，您可以单个开通或批量开通：
     -   **单个开通** 
         1.  单击右侧**开通自动续费**。
 
-            ![购买后开通](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156594094246770_zh-CN.png)
+            ![购买后开通](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156886208046770_zh-CN.png)
 
             **说明：** 示例为新版续费管理控制台操作步骤，如果您使用旧版控制台，需要在左侧导航栏中找到**云数据库POLARDB**，然后开通自动续费。
 
         2.  在弹出的对话框中，选择**自动续费周期**，单击**开通自动续费**。
 
-            ![开通设置](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156594094246771_zh-CN.png)
+            ![开通设置](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156886208246771_zh-CN.png)
 
     -   **批量开通** 
 
         勾选目标集群，单击下方**开通自动续费**。
 
-        ![批量开通](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156594094348385_zh-CN.png)
+        ![批量开通](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156886208348385_zh-CN.png)
 
     -   在弹出的对话框中，选择**自动续费周期**，单击**开通自动续费**。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156594094348386_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156886208548386_zh-CN.png)
 
 
 ## 修改自动续费周期 {#section_d2g_wcy_s2b .section}
@@ -61,12 +59,12 @@
 1.  登录[POLARDB管理控制台](https://polardb.console.aliyun.com/)。
 2.  在控制台右上方，选择**费用** \> **续费管理**。
 
-    ![进入续费管理](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156594094246768_zh-CN.png)
+    ![进入续费管理](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156886208046768_zh-CN.png)
 
 3.  在控制台左上角单击**体验新版**，切换到新版控制台。
 4.  通过搜索过滤功能在自动续费页签中找到目标集群，单击右侧**修改自动续费**。
 
-    ![修改自动续费](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156594094346773_zh-CN.png)
+    ![修改自动续费](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156886208846773_zh-CN.png)
 
     **说明：** 示例为新版续费管理控制台操作步骤，如果您使用旧版控制台，需要在左侧导航栏中找到**云数据库POLARDB**，然后修改自动续费。
 
@@ -77,12 +75,12 @@
 1.  登录[POLARDB管理控制台](https://polardb.console.aliyun.com/)。
 2.  在控制台右上方，选择**费用** \> **续费管理**。
 
-    ![进入续费管理](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156594094246768_zh-CN.png)
+    ![进入续费管理](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156886208046768_zh-CN.png)
 
 3.  在控制台左上角单击**体验新版**，切换到新版控制台。
 4.  通过搜索过滤功能在自动续费页签中找到目标集群，单击右侧**恢复手动续费**。
 
-    ![关闭自动续费](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156594094348390_zh-CN.png)
+    ![关闭自动续费](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/216851/156886209148390_zh-CN.png)
 
     **说明：** 示例为新版续费管理控制台操作步骤，如果您使用旧版控制台，需要在左侧导航栏中找到**云数据库POLARDB**，然后关闭自动续费。
 
@@ -92,11 +90,11 @@
 
 |API|描述|
 |:--|:-|
-|[CreateDBCluster](../../../../intl.zh-CN/API参考/集群管理/CreateDBCluster.md#)|创建数据库集群 **说明：** 创建集群时开通自动续费。
+|[CreateDBCluster](../../../../cn.zh-CN/API参考/集群管理/CreateDBCluster.md#)|创建数据库集群 **说明：** 创建集群时开通自动续费。
 
  |
-|[ModifyAutoRenewAttribute](../../../../intl.zh-CN/API参考/集群管理/ModifyAutoRenewAttribute.md#)|设置包年包月集群自动续费状态 **说明：** 创建集群后开通自动续费。
+|[ModifyAutoRenewAttribute](../../../../cn.zh-CN/API参考/集群管理/ModifyAutoRenewAttribute.md#)|设置包年包月集群自动续费状态 **说明：** 创建集群后开通自动续费。
 
  |
-|[DescribeAutoRenewAttribute](../../../../intl.zh-CN/API参考/集群管理/DescribeAutoRenewAttribute.md#)|查询包年包月集群自动续费状态|
+|[DescribeAutoRenewAttribute](../../../../cn.zh-CN/API参考/集群管理/DescribeAutoRenewAttribute.md#)|查询包年包月集群自动续费状态|
 
