--- a/cn.zh-CN/POLARDB for Oracle用户指南/计费管理/手动续费集群.md
+++ b/cn.zh-CN/POLARDB for Oracle用户指南/计费管理/手动续费集群.md
@@ -10,7 +10,7 @@
 2.  在左上角选择地域，即可显示您账号在该地域的所有集群。
 3.  找到目标集群，在右侧选择**...** \> **续费**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/15659404602102_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/15688628442102_zh-CN.png)
 
 4.  选择续费时长并勾选服务协议，单击**去支付**完成支付即可。
 
@@ -19,17 +19,17 @@
 1.  进入[POLARDB控制台](https://polardb.console.aliyun.com/)。
 2.  在控制台右上方，选择**费用** \> **续费管理**。
 
-    ![续费管理控制台](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/156594046048357_zh-CN.png)
+    ![续费管理控制台](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/156886284448357_zh-CN.png)
 
 3.  在控制台左上角单击**体验新版**，切换到新版控制台。
 
-    ![切换新版](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/156594046048373_zh-CN.png)
+    ![切换新版](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/156886284448373_zh-CN.png)
 
 4.  通过搜索过滤功能在手动续费页签中找到目标集群，您可以单个续费或批量续费：
     -   **单个续费** 
         1.  在目标集群右侧单击**续费**。
 
-![续费集群2](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/156594046048358_zh-CN.png)
+![续费集群2](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/156886284448358_zh-CN.png)
 
 **说明：** 
 
@@ -39,14 +39,14 @@
     -   **批量续费** 
         1.  勾选目标集群，单击下方**批量续费**。
 
-            ![批量续费](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/156594046048379_zh-CN.png)
+            ![批量续费](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/156886284448379_zh-CN.png)
 
         2.  选择每个集群的**续费时长**，单击**去支付**完成支付即可。
 
-            ![批量续费修改](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/156594046048382_zh-CN.png)
+            ![批量续费修改](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3030/156886284448382_zh-CN.png)
 
 
 ## 自动续费 {#section_jaq_119_mim .section}
 
-开通自动续费可以免去您定期手动续费的烦恼，且不会因为忘记续费而导致业务中断。详情请参见[自动续费](intl.zh-CN/POLARDB for MySQL用户指南/计费管理/自动续费集群.md#)。
+开通自动续费可以免去您定期手动续费的烦恼，且不会因为忘记续费而导致业务中断。详情请参见[自动续费](cn.zh-CN/POLARDB for MySQL用户指南/计费管理/自动续费集群.md#)。
 
