--- a/cn.zh-CN/POLARDB for Oracle用户指南/账号管理/创建和使用子账号.md
+++ b/cn.zh-CN/POLARDB for Oracle用户指南/账号管理/创建和使用子账号.md
@@ -1,17 +1,14 @@
 # 创建和使用子账号 {#concept_y33_t4q_tdb .concept}
 
-如果只有您本人使用POLARDB，那么使用阿里云账号即可。
-
-如果需要让其他人使用您账号下的资源，请创建子账号。
+如果只有您本人使用POLARDB，那么使用阿里云账号即可。如果需要让其他人使用您账号下的资源，请创建子账号。
 
 ## 创建RAM子账号 {#section_m66_z7t_pfi .section}
 
-1.  您可以使用阿里云账号或有RAM权限的子账号来创建子账号，首先需要登陆RAM控制台。具体操作如下：
+1.  您可以使用阿里云账号或有RAM权限的子账号来创建子账号，首先需要登录RAM控制台。具体操作如下：
     -   如果使用阿里云账号，请[点此登录](https://account.aliyun.com/login/login.htm)。
-
     -   如果使用子账号，请[点此登录](https://signin.aliyun.com/login.htm)。
 
-**说明：** 子账号登录的格式为`子账号名@公司别名`。
+        **说明：** 子账号登录的格式为`子账号名@公司别名`。
 
 2.  在左侧导航栏的**人员管理**菜单下，单击**用户**。
 3.  单击**新建用户**。
@@ -61,12 +58,12 @@
 
 -   专用登录地址：如果您可以登录[RAM控制台](https://ram.console.aliyun.com)，可以在RAM控制台查看到您公司的子账号登录地址。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3025/15659438586630_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3025/15688629416630_zh-CN.png)
 
     如果通过此地址登录，系统将自动为您填写公司别名，您只需输入子账号名。
 
 
 ## 更多操作 {#section_bc2_54q_tdb .section}
 
-您还可以对子账号进行更多的操作，如把子账号添加到用户组、为子账号分配角色、为用户组或角色授权等。详情请参见[RAM用户指南](https://help.aliyun.com/document_detail/28645.html)。
+您还可以对子账号进行更多的操作，如把子账号添加到用户组、为子账号分配角色、为用户组或角色授权等。详情请参见[RAM用户指南](https://help.aliyun.com/product/28625.html)。
 
