--- a/cn.zh-CN/POLARDB for Oracle用户指南/集群管理/查看连接地址.md
+++ b/cn.zh-CN/POLARDB for Oracle用户指南/集群管理/查看连接地址.md
@@ -1,8 +1,10 @@
 # 查看连接地址 {#concept_imd_wlq_tdb .concept}
 
+本文为您介绍POLARDB数据库集群主地址、私网地址以及如何查看连接地址。
+
 ## 查看方法 {#section_5cl_22o_hob .section}
 
-1.  进入[POLARDB控制台](https://polardb.console.aliyun.com)。
+1.  登录[POLARDB控制台](https://polardb.console.aliyun.com)。
 2.  找到目标集群，单击集群的ID。
 3.  在访问信息区域查看连接地址。
 
@@ -27,6 +29,10 @@
 -   使用DMS通过VPC访问数据库集群。
 
  |
+
+## 下一步 {#section_gts_kv7_sfv .section}
+
+[连接数据库集群](../cn.zh-CN/POLARDB for PostgreSQL用户指南/集群管理/连接数据库集群.md#)
 
 ## 相关API {#section_i41_s4h_yfb .section}
 
