--- a/intl.zh-CN/产品定价/规格与定价.md
+++ b/intl.zh-CN/产品定价/规格与定价.md
@@ -29,7 +29,7 @@ POLARDB支持以下两种付费方式：
 
 **按量付费**
 
-存储空间采用Serverless方式，购买时无需选择容量，随着数据增长而在线自动扩容，只按实际数据量大小收费。您可以在集群的[详情页面](../intl.zh-CN/POLARDB for MySQL用户指南/集群管理/查看数据库集群.md#)查看已使用的数据量。
+存储空间采用Serverless方式，购买时无需选择容量，随着数据增长而在线自动扩容，只按实际数据量大小收费。您可以在集群的基本信息页面查看已使用的数据量。
 
 -   中国大陆地域：0.00077美元/GB/小时。
 -   中国香港及海外地域：0.00085美元/GB/小时。
