--- a/cn.zh-CN/POLARDB for MySQL用户指南/读写分离.md
+++ b/cn.zh-CN/POLARDB for MySQL用户指南/读写分离.md
@@ -6,9 +6,9 @@ POLARDB for MySQL集群自带读写分离功能。应用程序只需连接一个
 
 -   **读一致性** 
 
-    在POLARDB的链路中间层做读写分离的同时，中间层会track各个节点已经apply了的redolog位点即LSN，同时每次更新时会记录此次更新的位点为Session LSN, 当有新请求到来时我们会比较Session LSN 和当前各个节点的LSN，仅将请求发往LSN \>= Session LSN的节点，从而保证了会话一致性；表面上看该方案可能导致主库压力大，但是因为POLARDB是物理复制，速度极快，在上述场景中，当更新完成后，返回客户端结果时复制就同步在进行，而当下一个读请求到来时主从极有可能已经完成，然后大多数应用场景都是读多写少，所以经验证在该机制下即保证了会话一致性，也保证了读写分离负载均衡的效果。
+    在POLARDB的链路中间层进行读写分离时，中间层会追踪（track）各个节点已经应用（apply）的重做日志（redolog）位点，即日志序号（LSN）；同时，每次数据更新时将此次更新的位点记录为Session LSN。当POLARDB收到新的请求时，将Session LSN与各个节点的LSN进行比较，仅将请求发往LSN早于Session LSN的节点，从而保证会话的一致性。表面上看该方案可能导致主库压力大，但是因为POLARDB是物理复制，速度极快，在上述场景中，当更新完成后，返回客户端结果时复制就同步在进行，而当下一个读请求到来时主从极有可能已经完成，然后大多数应用场景都是读多写少，所以经验证在该机制下即保证了会话一致性，也保证了读写分离负载均衡的效果。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/76678/156678974434632_zh-CN.png)
+    ![示意图](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/76678/156897353334632_zh-CN.png)
 
 -   **原生支持读写分离，提升性能** 
 
@@ -35,29 +35,29 @@ POLARDB for MySQL集群自带读写分离功能。应用程序只需连接一个
 
 -   可读可写模式转发逻辑：
     -   只发往主节点
-        -   所有DML操作（INSERT,UPDATE,DELETE\)；
-        -   所有DDL操作（建表/库、删表/库、变更表结构、权限等）；
-        -   所有事务中的请求；
-        -   用户自定义函数；
-        -   存储过程；
-        -   EXECUTE语句；
-        -   [Multi Statements](https://dev.mysql.com/doc/internals/en/multi-statement.html)；
-        -   使用到临时表的请求；
-        -   SELECT last\_insert\_id\(\)；
-        -   所有对用户变量的查询和更改；
-        -   SHOW PROCESSLIST；
+        -   所有DML操作（INSERT、UPDATE、DELETE）。
+        -   所有DDL操作（建表/库、删表/库、变更表结构、权限等）。
+        -   所有事务中的请求。
+        -   用户自定义函数。
+        -   存储过程。
+        -   EXECUTE语句。
+        -   [Multi Statements](https://dev.mysql.com/doc/internals/en/multi-statement.html)。
+        -   使用到临时表的请求。
+        -   SELECT last\_insert\_id\(\)。
+        -   所有对用户变量的查询和更改。
+        -   SHOW PROCESSLIST。
         -   KILL（SQL语句中的KILL，非命令KILL）。
     -   发往只读节点或主节点
-        -   非事务中的读请求；
+        -   非事务中的读请求。
         -   COM\_STMT\_EXECUTE命令。
     -   总是发往所有节点
-        -   所有系统变量的更改；
-        -   USE命令；
-        -   COM\_STMT\_PREPARE命令；
+        -   所有系统变量的更改。
+        -   USE命令。
+        -   COM\_STMT\_PREPARE命令。
         -   COM\_CHANGE\_USER/COM\_QUIT/COM\_SET\_OPTION等命令。
 -   只读模式转发逻辑：
-    -   不允许执行DDL、DML操作；
-    -   所有请求按照负载均衡的方式转发到各只读节点；
+    -   不允许执行DDL、DML操作。
+    -   所有请求按照负载均衡的方式转发到各只读节点。
     -   所有请求不会转发到可读可写节点。
 
 ## 使用限制 {#section_e1j_d55_j2b .section}
@@ -78,7 +78,7 @@ POLARDB for MySQL集群自带读写分离功能。应用程序只需连接一个
 
 6.  单击**修改**，设置新的集群地址，并单击**提交**。
 
-    ![修改集群地址](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15443/156678974545064_zh-CN.png)
+    ![修改集群地址](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15443/156897353445064_zh-CN.png)
 
 
 ## FAQs {#section_hrr_m55_j2b .section}
