--- a/intl.zh-CN/产品定价/规格与定价.md
+++ b/intl.zh-CN/产品定价/规格与定价.md
@@ -1,257 +1,445 @@
-# 规格与定价 {#concept_zbj_4pg_tdb .concept}
+# 规格与定价
 
-本文为您介绍POLARDB的定价及规格，主要包括付费方式、收费项、存储空间价格、数据备份价格、计算节点价格等。
+本文为您介绍PolarDB的定价及规格，主要包括付费方式、收费项、计算节点价格、存储空间价格、数据备份价格、SQL洞察价格和GDN价格。
 
-## 付费方式 {#section_d4v_rpg_tdb .section}
+## 付费方式
 
-POLARDB支持以下两种付费方式：
+PolarDB支持以下两种付费方式：
 
--   **包年包月（也称为预付费）** 
+-   包年包月（也称为预付费）
 
     在新建数据库集群时支付计算集群（一个主节点和一个只读节点）的费用，而存储空间会根据实际数据量按小时计费，并从账户中按小时扣除。
 
--   **按量付费（也称为按小时付费、后付费）** 
+-   按量付费（也称为按小时付费、后付费）
 
     无需预先支付费用，计算集群和存储空间（根据实际数据量）均按小时计费，并从账户中按小时扣除。
 
 
-## 收费项 {#section_xzw_tfj_kgb .section}
+## 收费项
 
-使用POLARDB集群需要支出的费用如下：
+使用PolarDB集群需要支出的费用如下：
 
 |收费项|说明|
 |---|--|
-|[计算集群（主节点和只读节点）](#section_f4v_rpg_tdb)|**包年包月**或**按小时付费**。|
+|[计算节点（主节点和只读节点）](#section_8h7_a53_zxb)|**包年包月**或**按小时付费**。|
 |[存储空间](#section_u9d_n9d_3jt)|**按小时付费**。|
-|数据备份|暂不收费。|
+|[数据备份](#section_ryg_gsw_hmu)|PolarDB备份功能免费，仅收取备份文件空间费用。详情请参见[备份数据](/intl.zh-CN/用户指南/备份与恢复/备份数据.md)。|
+|[SQL洞察价格](#section_7n5_1om_2a6)|开启后，**按量付费**。详情请参见[SQL洞察简介](/intl.zh-CN/用户指南/诊断与优化/SQL洞察.md)。|
+|[全球数据库（GDN）](#section_y7y_dnz_rx2)|GDN功能暂不收费，仅收取GDN下每个PolarDB集群自身的费用。详情请参见[全球数据库（GDN）](/intl.zh-CN/用户指南/部署架构/全球数据库/新建全球数据库和添加从集群.md)。|
 
-## 存储空间价格 {#section_u9d_n9d_3jt .section}
+## 计算节点价格
 
-**按量付费**
-
-存储空间采用Serverless方式，购买时无需选择容量，随着数据增长而在线自动扩容，只按实际数据量大小收费。您可以在集群的基本信息页面查看已使用的数据量。
-
--   中国大陆地域：0.00077美元/GB/小时。
--   中国香港及海外地域：0.00085美元/GB/小时。
-
-**说明：** 每个集群规格都有对应的[最大存储容量](intl.zh-CN/产品定价/规格与定价.md#table_g1y_xjg_tdb)。如需提高存储容量上限，请[升级集群规格](../intl.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md)。
-
-## 数据备份价格 {#section_ryg_gsw_hmu .section}
-
-POLARDB备份文件占用的存储空间暂不收费。
-
-## 计算节点价格 {#section_f4v_rpg_tdb .section}
-
-POLARDB的所有节点规格均为独享型节点。独享型节点是指该节点独占所分配到的CPU、内存、存储和I/O资源，而非与其他节点共享资源，因此性能更加稳定可靠。POLARDB目前提供以下规格的节点供您选择。
+PolarDB的所有节点规格均为独享型节点。独享型节点是指该节点独占所分配到的CPU、内存、存储和I/O资源，而非与其他节点共享资源，因此性能更加稳定可靠。PolarDB目前提供以下规格的节点供您选择。
 
 |节点规格|CPU和内存数|最大存储容量|最大连接数|内网带宽|最大IOPS|I/O带宽|
 |:---|:------|:-----|:----|----|------|-----|
-|polar.mysql.x2.medium| 2核
+|polar.mysql.x4.medium|2核
 
- 4GB
+8GB
 
- |5TB|1,200|1Gbps|8000|1Gbps|
-|polar.mysql.x4.large| 4核
+|5TB|1,200|1Gbps|8000|1Gbps|
+|polar.mysql.x4.large|4核
 
- 16GB
+16GB
 
- |10TB|5,000|10Gbps|32,000|4Gbps|
-|polar.mysql.x4.xlarge| 8核
+|10TB|5,000|10Gbps|32,000|4Gbps|
+|polar.mysql.x4.xlarge|8核
 
- 32GB
+32GB
 
- |10TB|10,000|10Gbps|64,000|8Gbps|
-|polar.mysql.x8.xlarge| 8核
+|10TB|10,000|10Gbps|64,000|8Gbps|
+|polar.mysql.x8.xlarge|8核
 
- 64GB
+64GB
 
- |30TB|10,000|10Gbps|72,000|10Gbps|
-|polar.mysql.x8.2xlarge| 16核
+|30TB|10,000|10Gbps|72,000|10Gbps|
+|polar.mysql.x8.2xlarge|16核
 
- 128GB
+128GB
 
- |50TB|20,000|10Gbps|128,000|16Gbps|
-|polar.mysql.x8.4xlarge| 32核
+|50TB|20,000|10Gbps|128,000|16Gbps|
+|polar.mysql.x8.4xlarge|32核
 
- 256GB
+256GB
 
- |50TB|64,000|10Gbps|192,000|24Gbps|
-|polar.mysql.x8.12xlarge| 88核
+|50TB|64,000|10Gbps|192,000|24Gbps|
+|polar.mysql.x8.12xlarge|88核
 
- 710GB
+710GB
 
- |50TB|64,000|25Gbps|256,000|32Gbps|
+|50TB|64,000|25Gbps|256,000|32Gbps|
 
-**说明：** 2核4GB的集群为入门级，用于测试、体验和极小负载的场景，高负载的生产环境不建议使用。生产环境推荐使用8核32GB或以上规格的集群。
+**说明：**
 
-|节点规格|中国大陆|中国（香港）|美国（硅谷）|新加坡|印度尼西亚（雅加达）|
-|:---|----|------|------|---|----------|
-|polar.mysql.x2.medium| 44美元/月
+-   2核8GB的集群为入门级，用于测试、体验和极小负载的场景，高负载的生产环境不建议使用。生产环境推荐使用8核32GB或以上规格的集群。
+-   若您有更高的存储需求，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)联系售后服务将存储容量上限升级为100TB。
+
+|配置|中国内地|中国（香港）|美国（硅谷）|新加坡|印度尼西亚（雅加达）|马来西亚（吉隆坡）|德国（法兰克福）|印度（孟买）|美国（弗吉尼亚）|日本（东京）|
+|节点规格|CPU和内存数|
+|:-|----|------|------|---|----------|---------|--------|------|--------|------|
+|:---|-------|
+|polar.mysql.x4.medium|2核
+
+ 8GB
+
+|44美元/月
 
  0.091美元/小时
 
- | 76美元/月
+|76美元/月
 
  0.117美元/小时
 
- | 62美元/月
+|62美元/月
 
- 0.130美元/小时
+ 0.128美元/小时
 
- | 76美元/月
+|76美元/月
 
- 0.16美元/小时
+ 0.159美元/小时
 
- | 74美元/月
+|74美元/月
 
  0.15美元/小时
 
- |
-|polar.mysql.x4.large| 155美元/月
+|76美元/月
+
+ 0.159美元/小时
+
+|67美元/月
+
+ 0.139美元/小时
+
+|61美元/月
+
+ 0.126美元/小时
+
+|50美元/月
+
+ 0.104美元/小时
+
+|64美元/月
+
+ 0.133美元/小时 |
+|polar.mysql.x4.large|4核
+
+ 16GB
+
+|155美元/月
 
  0.323美元/小时
 
- | 295美元/月
+|295美元/月
 
  0.532美元/小时
 
- | 240美元/月
+|240美元/月
 
- 0.500美元/小时
+ 0.501美元/小时
 
- | 295美元/月
+|295美元/月
 
- 0.61美元/小时
+ 0.613美元/小时
 
- | 271美元/月
+|271美元/月
 
  0.57美元/小时
 
- |
-|polar.mysql.x4.xlarge| 310美元/月
+|295美元/月
+
+ 0.613美元/小时
+
+|264美元/月
+
+ 0.549美元/小时
+
+|233美元/月
+
+ 0.484美元/小时
+
+|202美元/月
+
+ 0.42美元/小时
+
+|248美元/月
+
+ 0.516美元/小时 |
+|polar.mysql.x4.xlarge|8核
+
+ 32GB
+
+|310美元/月
 
  0.646美元/小时
 
- | 589美元/月
+|589美元/月
 
  1.063美元/小时
 
- | 480美元/月
+|480美元/月
 
- 1.000美元/小时
+ 1.001美元/小时
 
- | 589美元/月
+|589美元/月
 
- 1.23美元/小时
+ 1.226美元/小时
 
- | 542美元/月
+|542美元/月
 
  1.13美元/小时
 
- |
-|polar.mysql.x8.xlarge| 496美元/月
+|589美元/月
+
+ 1.226美元/小时
+
+|527美元/月
+
+ 1.097美元/小时
+
+|480美元/月
+
+ 1美元/小时
+
+|403美元/月
+
+ 0.839美元/小时
+
+|496美元/月
+
+ 1.032美元/小时 |
+|polar.mysql.x8.xlarge|8核
+
+ 64GB
+
+|496美元/月
 
  1.033美元/小时
 
- | 743美元/月
+|743美元/月
 
  1.342美元/小时
 
- | 620美元/月
+|620美元/月
 
- 1.290美元/小时
+ 1.291美元/小时
 
- | 743美元/月
+|743美元/月
 
- 1.55美元/小时
+ 1.548美元/小时
 
- | 689美元/月
+|689美元/月
 
  1.44美元/小时
 
- |
-|polar.mysql.x8.2xlarge| 991美元/月
+|743美元/月
+
+ 1.548美元/小时
+
+|651美元/月
+
+ 1.355美元/小时
+
+|604美元/月
+
+ 1.258美元/小时
+
+|496美元/月
+
+ 1.032美元/小时
+
+|635美元/月
+
+ 1.323美元/小时 |
+|polar.mysql.x8.2xlarge|16核
+
+ 128GB
+
+|991美元/月
 
  2.064美元/小时
 
- | 1,486美元/月
+|1,486美元/月
 
  2.684美元/小时
 
- | 1,239美元/月
+|1,239美元/月
 
- 2.580美元/小时
+ 2.58美元/小时
 
- | 1,486美元/月
+|1,486美元/月
 
- 3.10美元/小时
+ 3.096美元/小时
 
- | 1,378美元/月
+|1,378美元/月
 
  2.87美元/小时
 
- |
-|polar.mysql.x8.4xlarge| 1,982美元/月
+|1,486美元/月
+
+ 3.096美元/小时
+
+|1,301美元/月
+
+ 2.709美元/小时
+
+|1208美元/月
+
+ 2.516美元/小时
+
+|991美元/月
+
+ 2.064美元/小时
+
+|1270美元/月
+
+ 2.645美元/小时 |
+|polar.mysql.x8.4xlarge|32核
+
+ 256GB
+
+|1,982美元/月
 
  4.128美元/小时
 
- | 2,972美元/月
+|2,972美元/月
 
  5.367美元/小时
 
- | 2,477美元/月
+|2,477美元/月
 
- 5.160美元/小时
+ 5.16美元/小时
 
- | 2,972美元/月
+|2,972美元/月
 
- 6.19美元/小时
+ 6.192美元/小时
 
- | 2,756美元/月
+|2,756美元/月
 
  5.74美元/小时
 
- |
-|polar.mysql.x8.12xlarge| 5,449美元/月
+|2,972美元/月
+
+ 6.192美元/小时
+
+|2,601美元/月
+
+ 5.418美元/小时
+
+|2415美元/月
+
+ 5.031美元/小时
+
+|1982美元/月
+
+ 4.128美元/小时
+
+|2539美元/月
+
+ 5.289美元/小时 |
+|polar.mysql.x8.12xlarge|88核
+
+ 710GB
+
+|5,449美元/月
 
  11.351美元/小时
 
- | 8,173美元/月
+|8,173美元/月
 
  14.756美元/小时
 
- | 6,811美元/月
+|6,811美元/月
 
- 14.190美元/小时
+ 14.189美元/小时
 
- | 8,173美元/月
+|8,173美元/月
 
- 17.03美元/小时
+ 17.026美元/小时
 
- | 7,577美元/月
+|7,577美元/月
 
  15.78美元/小时
 
- |
+|8,173美元/月
 
-**说明：** 
+ 17.026美元/小时
 
--   **以上表格中的价格为单个节点的价格，一个POLARDB集群默认包含一个主节点和一个只读节点。**
+|7,229美元/月
+
+ 15.059美元/小时
+
+|6640美元/月
+
+ 10.061美元/小时
+
+|5449美元/月
+
+ 11.351美元/小时
+
+|6981美元/月
+
+ 14.543美元/小时 |
+
+**说明：**
+
+-   以上表格中的价格为单个节点的价格，一个PolarDB集群默认包含一个主节点和一个只读节点。
 -   您可以在创建集群时选择主节点的规格，只读节点将采用与主节点相同的规格。
--   **最大IOPS**为理论换算值。
+-   最大IOPS为理论换算值。
 -   集群的最大连接数跟集群中的节点规格有关，增加节点数量并不能增加集群的连接数。
--   如果您需要其他计算能力和存储容量（例如**100 TB**），请通过[提交工单](https://workorder-intl.console.aliyun.com/console.htm?spm=5176.2020520001.console-base-top.dwork-order-1.497b4bd3uHPH0W#/ticket/createIndex)联系售后服务。
+-   如果您需要其他计算能力和存储容量（例如100 TB），请通过[提交工单](https://workorder-intl.console.aliyun.com/console.htm?spm=5176.2020520001.console-base-top.dwork-order-1.497b4bd3uHPH0W#/ticket/createIndex)联系售后服务。
 
-## 常见问题 {#section_mxm_x1v_vfb .section}
+## 数据备份价格
+
+PolarDB备份和恢复功能均免费使用，但备份文件需要占用一定的存储空间，PolarDB会根据备份文件（数据+日志）的存储容量和保存时长收取一定费用，关于如何设置备份功能，详情请参见[备份数据](/intl.zh-CN/用户指南/备份与恢复/备份数据.md)。
+
+|地域|一级备份|二级备份|日志备份|
+|--|----|----|----|
+|中国内地|0.000464美元/GB/小时|0.0000325美元/GB/小时|0.0000325美元/GB/小时|
+|中国香港及海外|0.000650美元/GB/小时|0.0000455美元/GB/小时|0.0000455美元/GB/小时|
+
+|备份类型|免费额度|计费方式|
+|----|----|----|
+|一级备份|数据库存储用量 x 50% 您可以在控制台**基本信息**页面查看数据库存储用量。
+
+|每小时费用 =（ 一级备份总大小 - 免费额度）x 每小时价格 -   一级备份小于免费额度时，一级备份不收取任何费用。
+-   **一级备份（快照）总大小**如下图中①所示，而非②。
+
+![一级备份快照总大小](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/0340359951/p103440.png)
+
+
+示例：一级备份（快照）总大小为700GB，数据库存储用量为1000GB，那么每小时费用为0.6元。
+
+计算公式：\[ 700GB -（1000GB x 50%）\] x 0.000464美元 = 0.0928美元 |
+|二级备份|无|每小时费用 = 二级备份总大小 x 每小时价格 示例：二级备份总大小为1000GB，那么每小时费用为0.21元。
+
+计算公式：1000GB x 0.0000325美元 = 0.0325美元 |
+|日志备份|100GB|每小时费用 =（日志备份总大小 - 100GB） x 每小时价格 示例：日志备份总大小为1000GB，那么每小时费用为0.189元。
+
+计算公式：（1000GB - 100GB） x 0.0000325美元 = 0.02925美元 |
+
+## SQL洞察价格
+
+SQL洞察按照审计日志存储的容量收取费用。
+
+-   中国内地地域：0.0013美元/GB/小时。
+-   中国香港及海外地域：0.0019美元/GB/小时。
+
+**说明：** 审计日志的存储容量按量扣费，不支持包年包月。
+
+## 全球数据库（GDN）
+
+目前全球数据库（GDN）跨地域传输功能暂不收费，您只需要支付每个PolarDB集群自身的费用，关于PolarDB集群自身费用，请参见[计算节点价格](#section_8h7_a53_zxb)。
+
+## 常见问题
 
 -   问：如果增加一个只读节点，价格如何收费？
 
-    答：只读节点的价格和主节点的价格一致，请参见上面的[节点规格及售价](#)。
+    答：只读节点的价格和主节点的价格一致，请参见上面的[计算节点价格](#section_8h7_a53_zxb)。
 
 -   问：如果增加一个只读节点，存储容量是否会增大一倍？
 
-    答：POLARDB采用计算与存储分离的架构，购买的只读节点是计算资源，因此存储容量不会增加。
+    答：PolarDB采用计算与存储分离的架构，购买的只读节点是计算资源，因此存储容量不会增加。
 
-    存储空间采用Serverless方式，购买时无需选择容量，随着数据增长而在线自动扩容，只按实际数据量大小收费。每个集群规格都有对应的[最大存储容量](intl.zh-CN/产品定价/规格与定价.md#table_g1y_xjg_tdb)。如需提高存储容量上限，请[升级集群规格](../intl.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md)。
+    存储空间采用Serverless方式，购买时无需选择容量，随着数据增长而在线自动扩容，只按实际数据量大小收费。每个集群规格都有对应的最大存储容量。如需提高存储容量上限，请[升级集群规格](/intl.zh-CN/用户指南/弹性升降级/变更配置.md)。
 
 
