--- a/cn.zh-CN/用户指南/购买集群或存储包/使用计算包.md
+++ b/cn.zh-CN/用户指南/购买集群或存储包/使用计算包.md
@@ -8,7 +8,7 @@
 
 ## 注意事项
 
--   当前仅**商品类型**为**按量付费**（即后付费或按小时付费的）PolarDB MySQL集群支持使用计算包进行抵扣。
+-   当前仅**商品类型**为**按量付费**（也称后付费或按小时付费）的PolarDB MySQL集群支持使用计算包进行抵扣。
 -   计算包订购成功后立即生效，但具体的使用明细一般会延迟6小时展示。
 -   每个计算包都有各自的有效期，有效期结束之前未消耗完的计算包容量会自动失效，请在有效期内用完避免浪费。
 
@@ -39,18 +39,18 @@
 
 -   使用方式
 
-    计算包的使用方式与电费充值卡的使用方式类似。假设有一台功率为100W的电冰箱，每小时的耗电量为100 W x 1 H = 0.1 kW\*h（度），当前电费单价为0.5元/度，则一张已充值100元（即包含200度电）的电卡可供该冰箱连续工作1000小时。类似地，一个规格为2核8 GB的节点算力为0.01 CU，每小时需要的计算消耗量为0.01 CU x 1H = 0.01 CU\*H，则一个380元（即包含10 度计算量）的国内地域通用计算包可供该节点连续工作1000小时。
+    计算包的使用方式与电费充值卡的使用方式类似。假设有一台功率为100W的电冰箱，每小时的耗电量为100 W x 1 H = 0.1 kW\*h（度），当前电费单价为0.5元/度，则一张已充值100元（即包含200度电）的电卡可供该冰箱连续工作1000小时。类似地，一个规格为2核8 GB的节点算力为0.01 CU，每小时需要的计算消耗量为0.01 CU x 1H = 0.01 CU\*H，当前计算量单价为38元/度，则一个380元（即包含10度计算量）的国内地域通用计算包可供该节点连续工作1000小时。
 
-    ![计算包](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/8030610061/p165336.png)
+    ![计算包](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/2717660061/p165336.png)
 
 
 ## 抵扣方式
 
 -   抵扣系数
 
-    不同地域的计算节点成本有所差别，中国香港及海外地域的计算节点成本稍高于中国国内地域。因此在使用计算包抵扣计算节点费用时，需按照以下系数进行抵扣。
+    不同地域的计算节点成本有所差别，中国香港及海外地域的计算节点成本稍高于中国内地。因此在使用计算包抵扣计算节点费用时，需按照以下系数进行抵扣。
 
-    -   中国国内地域的计算包抵扣系数为1。
+    -   中国内地通用的计算包抵扣系数为1。
 
         例如一个2核8 GB的节点每小时的计算消耗量为0.01 CU\*H，则在计算包中因其而抵扣的费用为1 x 0.01 CU\*H x 38 元/CU\*H =0.38元。
 
@@ -73,6 +73,7 @@
 
     |参数|说明|
     |--|--|
+    |**商品类型**|选择**计算包**。|
     |**可用于数据库类型**|固定为**PolarDB MySQL**，无需选择。|
     |**计算包规格**|您可以根据业务需求选择**小**、**中**或**大**规格。|
     |**计算包容量**|    -   若您选择**计算包规格**为**小**，则可选的容量范围为50 CU\*H~800 CU \*H。
@@ -86,7 +87,7 @@
 
 3.  单击**立即购买**。
 
-4.  勾选服务协议，单击**去支付**完成支付。
+4.  选中服务协议，单击**去支付**完成支付。
 
 
 ## 查看计算包抵扣量
@@ -128,7 +129,7 @@
 |是否支持被多个集群同时抵扣|支持。**说明：** 目前仅支持PolarDB MySQL集群使用计算包。
 
 |支持。|
-|可抵扣集群的商品类型|仅支持抵扣商品类型为**按量付费**（后付费或按小时付费）的集群。**说明：** **包年包月**（即预付费）集群已预先支付过计算规格的费用因此无需使用计算包重复抵扣。
+|可抵扣集群的商品类型|仅支持抵扣商品类型为**按量付费**（也称后付费或按小时付费）的集群。**说明：** **包年包月**（也称预付费）集群已预先支付过计算规格的费用因此无需使用计算包重复抵扣。
 
 |全部集群。|
 |资源包总量是否变化|总量随着集群抵扣使用而递减。|总量恒定。|
@@ -143,7 +144,7 @@
 
 -   Q：在购买计算包购买前就已创建的PolarDB集群也支持使用计算包抵扣么？
 
-    A：支持，商品类型为**按量付费**（后付费或按小时付费）的集群都支持。
+    A：支持，商品类型为**按量付费**（也称后付费或按小时付费）的集群都支持。
 
     **说明：** 目前仅支持PolarDB MySQL集群使用。
 
@@ -153,7 +154,7 @@
 
 -   Q：**包年包月**集群如何使用计算包进行抵扣？
 
-    A：您需要包年包月的PolarDB MySQL集群转为**按量付费**的购买方式后才能使用计算包进行抵扣，详情请参见[包年包月转按量付费](/cn.zh-CN/用户指南/购买集群或存储包/包年包月转按量付费.md)。
+    A：您需要将**包年包月**的PolarDB MySQL集群购买方式转为**按量付费**后，才能使用计算包进行抵扣，详情请参见[包年包月转按量付费](/cn.zh-CN/用户指南/购买集群或存储包/包年包月转按量付费.md)。
 
 -   Q：小规格的计算包的有效期只能设置为1年么？可以自定义有效期么？
 
