--- a/cn.zh-CN/产品定价/规格与定价.md
+++ b/cn.zh-CN/产品定价/规格与定价.md
@@ -31,7 +31,7 @@ PolarDB支持以下两种付费方式：
 -   预付费购买**存储包**。详情请参见[使用存储包](/cn.zh-CN/用户指南/购买集群或存储包/使用存储包.md)。 |
 |[数据备份](#section_ryg_gsw_hmu)|PolarDB备份功能免费，仅收取备份文件空间费用。详情请参见[备份数据](/cn.zh-CN/用户指南/备份与恢复/备份数据.md)。|
 |[SQL洞察](#section_7n5_1om_2a6)|开启后，**按量付费**。详情请参见[SQL洞察简介](/cn.zh-CN/用户指南/诊断与优化/SQL洞察.md)。|
-|[全球数据库（GDN）](#section_y7y_dnz_rx2)|GDN跨地域传输功能暂不收费，仅收取GDN下每个PolarDB集群自身的费用，关于PolarDB集群自身费用。详情请参见[全球数据库（GDN）](/cn.zh-CN/用户指南/部署架构/全球数据库/新建全球数据库和添加从集群.md)。|
+|[全球数据库（GDN）价格](#section_y7y_dnz_rx2)|GDN跨地域传输功能暂不收费，仅收取GDN下每个PolarDB集群自身的费用。详情请参见[全球数据库（GDN）](/cn.zh-CN/用户指南/部署架构/全球数据库/新建全球数据库和添加从集群.md)。|
 
 ## 计算节点价格
 
@@ -533,7 +533,7 @@ SQL洞察按照审计日志存储的容量收取费用。
 
 **说明：** 审计日志的存储容量按量扣费，不支持包年包月。
 
-## 全球数据库（GDN）
+## 全球数据库（GDN）价格
 
 目前全球数据库（GDN）跨地域传输功能暂不收费，您只需要支付每个PolarDB集群自身的费用，关于PolarDB集群自身费用，请参见[计算节点价格](#section_8h7_a53_zxb)。
 
