--- a/cn.zh-CN/用户指南/内核功能/内核发布日志.md
+++ b/cn.zh-CN/用户指南/内核功能/内核发布日志.md
@@ -18,7 +18,7 @@ PolarDB数据库引擎在PolarDB架构中的位置如下图所示。
 |并行查询支持半连接（SEMIJOIN），详情请参见[semi-join的并行执行](/cn.zh-CN/用户指南/内核功能/并行查询/semi-join的并行执行.md)。|不支持|支持（内核版本需为 8.0.1.1.2或以上）|
 |并行查询支持联合（UNION）。|不支持|支持（内核版本需为 8.0.1.1.3或以上）|
 |并行查询支持哈希连接（HASHJOIN），详情请参见[并行查询中的hash join](/cn.zh-CN/用户指南/内核功能/并行查询/并行查询中的hash join.md)。|不支持|支持（内核版本需为 8.0.2.1.0或以上）|
-|安全|支持表回收站（Recycle Bn），避免出现因DROP误删导致数据丢失的情况，详情请参见[表回收站（Recycle Bin）](/cn.zh-CN/用户指南/内核功能/Recycle Bin.md)。|不支持|支持（内核版本需为 8.0.1.1.2或以上）|
+|安全|支持表回收站（Recycle Bin），避免出现因DROP误删导致数据丢失的情况，详情请参见[表回收站（Recycle Bin）](/cn.zh-CN/用户指南/内核功能/Recycle Bin.md)。|不支持|支持（内核版本需为 8.0.1.1.2或以上）|
 
 ## 查询版本号
 
